Remove obsolete fix of scrollbar appearing

--- a/js/src/app.css
+++ b/js/src/app.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2019 CZ.NIC z.s.p.o. (http://www.nic.cz/)
+ * Copyright (C) 2020 CZ.NIC z.s.p.o. (http://www.nic.cz/)
  *
  * This is free software, licensed under the GNU General Public License v3.
  * See /LICENSE for more information.
@@ -18,13 +18,6 @@ body {
 
 body {
     background-color: #f5f5f5;
-}
-
-/* Fixing twinks due to scroll bar appearing */
-
-html {
-    width: 100vw;
-    overflow-x: hidden;
 }
 
 h1 {
@@ -106,6 +99,8 @@ form > button {
 .user-select-none {
     user-select: none !important;
 }
+
+/* Fix disabled buttons */
 
 a.disabled,
 button:disabled {
